--- a/conf/reference.conf
+++ b/conf/reference.conf
@@ -128,7 +128,7 @@ mp {
         write-to-zk=false
         password=""//your password
         cluster-model=single//single,cluster
-        nodes:[]//["127.0.0.1:6379"]格式ip:port:password,密码可以不设置ip:port
+        nodes:["127.0.0.1:6379"]//["127.0.0.1:6379"]格式ip:port:password,密码可以不设置ip:port
         config {
             maxTotal:8,
             maxIdle:4,
